--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: ivory;
 }
+
+h1 {
+    color: cornflowerblue;
+    transition: color 0.5s ease-in-out; /* 색이 바뀌는 시간 설정 */
+}
+
+.active {
+    color: tomato;
+}
